cryptsetup (2:2.2.0~rc1-2) UNRELEASED; urgency=low

  * debian/*: Remove compatibility warnings regarding setting 'CRYPTSETUP' in
    the initramfs hook configuration.  The variable is no longer honored, and
    cryptsetup is always integrated to the initramfs when the
    'cryptsetup-initramfs' package is installed.

 -- Guilhem Moulin <guilhem@debian.org>  Wed, 31 Jul 2019 20:43:48 +0200

cryptsetup (2:2.2.0~rc1-1) experimental; urgency=low

  * New /testing/ upstream release 2.2.0 RC0.  Highlights include:
    + New LUKS2 online reencryption extension, allowing reencryption of
      mounted LUKS2 devices.
    + Optional global serialization lock for memory hard PBKDF, to workaround
      situations when multiple devices are unlocked in parallel, possibly
      exhausting memory and triggering the OOM killer.  (Cf. #924560.)
    + Add integritysetup support for bitmap mode (Linux >=5.2).
  * debian/control:
    + Add 'Multi-Arch: foreign' tags to 'cryptsetup-bin' and 'crytsetup-run',
      as binaries from these packages are architecture independent.
      (Closes: #930115)
    + Add 'Build-Depends: jq, xxd' as the jq(1) and xxd(1) executables are
      required for some upstream tests (skipped if the executables are not
      found in $PATH).
  * debian/*: Fix path names for /usr/share/doc/cryptsetup*/**.
    (Closes: #904916).
  * debian/doc/pandoc/encrypted-boot.md: Minor refactoring.
  * debian/gitlab-ci.yml: Adapt pandoc flags to Debian 9 (pass '-S').

 -- Guilhem Moulin <guilhem@debian.org>  Sun, 16 Jun 2019 00:55:18 +0200

cryptsetup (2:2.1.0-5) unstable; urgency=medium

  [ Jonas Meurer ]
  * debian/README.*: Fix markdown formatting issues
  * Copy https://wiki.debian.org/CryptsetupDebug to debian/README.debug

  [ Guilhem Moulin ]
  * d/README.Debian: New section "Unlocking LUKS devices from GRUB" pointing
    to https://cryptsetup-team.pages.debian.net/cryptsetup/encrypted-boot.html .
