@@ -33,7 +33,7 @@ Homepage: https://gitlab.com/cryptsetup/cryptsetup
 Vcs-Browser: https://salsa.debian.org/cryptsetup-team/cryptsetup
 Vcs-Git: https://salsa.debian.org/cryptsetup-team/cryptsetup.git
 
-Package: cryptsetup-run
+Package: cryptsetup
 Architecture: linux-any
 Multi-Arch: foreign
 Depends: cryptsetup-bin (>= 2:1.6.0),
@@ -41,8 +41,8 @@ Depends: cryptsetup-bin (>= 2:1.6.0),
          ${misc:Depends},
          ${shlibs:Depends}
 Suggests: dosfstools, keyutils, liblocale-gettext-perl
-Replaces: cryptsetup (<< 2:2.0.3-1), cryptsetup-bin (<< 2:2.0.3-2)
-Breaks: cryptsetup (<< 2:2.0.3-1), cryptsetup-bin (<< 2:2.0.3-2)
+Replaces: cryptsetup-run (<< 2:2.1.0-6)
+Breaks: cryptsetup-run (<< 2:2.1.0-6)
 Description: disk encryption support - startup scripts
  Cryptsetup provides an interface for configuring encryption on block
  devices (such as /home or swap partitions), using the Linux kernel
@@ -74,7 +74,7 @@ Description: disk encryption support - command line tools
 Package: cryptsetup-initramfs
 Architecture: all
 Depends: busybox | busybox-static,
-         cryptsetup-run (>= ${source:Version}),
+         cryptsetup (>= ${source:Version}),
          initramfs-tools (>= 0.129) | linux-initramfs-tool,
          ${misc:Depends}
 Recommends: console-setup, kbd
@@ -88,16 +88,14 @@ Description: disk encryption support - initramfs integration
  .
  This package provides initramfs integration for cryptsetup.
 
-Package: cryptsetup
+Package: cryptsetup-run
 Architecture: all
 Section: oldlibs
-Depends: cryptsetup-initramfs (>= 2:2.0.3-1),
-         cryptsetup-run (>= 2:2.0.3-1),
-         ${misc:Depends}
-Description: transitional dummy package for cryptsetup-{run,initramfs}
+Depends: cryptsetup (>= 2:2.1.0-6), ${misc:Depends}
+Description: transitional dummy package for cryptsetup
  This is a transitional dummy package to get upgrading systems to install the
- cryptsetup-run and cryptsetup-initramfs packages. It can safely be removed
- once no other package depends on it.
+ cryptsetup package. It can safely be removed once no other package depends on
+ it.
 
 Package: libcryptsetup12
 Section: libs
