@@ -1,3 +1,0 @@
-cryptsetup-run: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks status
-cryptsetup-run: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks-early status
-cryptsetup-run: no-debconf-config
