@@ -1,0 +1,3 @@
+cryptsetup: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks status
+cryptsetup: init.d-script-does-not-implement-optional-option etc/init.d/cryptdisks-early status
+cryptsetup: no-debconf-config
