@@ -1,1 +1,1 @@
-[type: gettext/rfc822deb] cryptsetup-run.templates
+[type: gettext/rfc822deb] cryptsetup.templates
